--- a/Cover Letter/CoverLetter_volunteer_smg.tex
+++ b/Cover Letter/CoverLetter_volunteer_smg.tex
@@ -66,17 +66,21 @@ Walden University\\
 Minneapolis, Minnesota}
 
 
-\newcommand{\Position}{S. Mason Garrison and Joseph Lee Rodgers\xspace}
+\newcommand{\Purpose}{volunteer as a reviewer for \Journal}
+\newcommand{\Justification}{My research primarily focuses on the application of quantitative methodology to address relationships between health and individual differences. I've worked predominantly with survival analysis (\textit{e.g.,} Jackson, Connolly, Garrison, \textit{et al.} 2015) and quasi-experimental sibling methods (\textit{e.g.,} Garrison \textit{et al.}, under review; Rodgers, ..., Garrison \textit{et al}, 2016)}
 
-\newcommand{\Journal}{\textit{Intelligence}\xspace}
+\newcommand{\Experience}{I have reviewed articles for the \textit{Journal of Family  Issues}, \textit{Journal of Research in Personality}, and \textit{Translational Issues in Psychological Science}.}
 
-\newcommand{\Presented}{This research was originally presented by Joe Rodgers at ISIR in Albuquerque last October}
+\newcommand{\Education}{At present, I am a doctoral student at Vanderbilt University, specializing Quantitative Psychology.}
+\newcommand{\Journal}{the \textit{Journal of Social, Behavioral, and Health Science}\xspace}
 
-\newcommand{\Goal}{Several studies, including Halpern \textit{et al.} (2000), have reported a positive relationship between age at first intercourse (AFI) and intelligence in s. Although this link between adolescenct intelligence and AFI has face validity, and has been confidently asserted (or often implied) as a causal link, the causal mechanism has not been carefully investigated}
+\newcommand{\Presented}{}
+
+\newcommand{\Goal}{}
 
 
-\newcommand{\Findings}{we used an intergenerational sibling comparison design to investigate the causal link between intelligence and AFI, using the National Longitudinal Survey of Youth 1979 and the NLSY-Children/Young Adult data. Using a between-family design, we replicated earlier results. However, when we use a within-family design and compare offspring of sisters, and then compare the offspring themselves, the relationship between maternal/child intelligence and AFI virtually disappears}%[list a few important results].
-\newcommand{\Scope}{challenges the strong causal inference in past studies concerning the relationship between AFI and intelligence}%specific link to the journal's aims \& scope
+\newcommand{\Findings}{}%[list a few important results].
+\newcommand{\Scope}{}%specific link to the journal's aims \& scope
 
 
 %----------------------------------------------------------------------------------------
@@ -88,19 +92,11 @@ Minneapolis, Minnesota}
 %	LETTER CONTENT
 %----------------------------------------------------------------------------------------
 
-I am writing to \Position
+I am writing to \Purpose. \Justification. \\
 
-I am pleased to submit an original research article entitled \Title by \Authors for consideration for publication in \Journal. \Presented.
+\Experience. \Education. I have enclosed a copy of my CV.
 
-\Goal.
 
-In this manuscript, \Findings.
-
-We believe that this manuscript is appropriate for publication by \Journal because it \Scope .
-
-This manuscript has not been published and is not under consideration for publication elsewhere. We have no conflicts of interest to disclose.
-
-Thank you for your consideration!
 
 %----------------------------------------------------------------------------------------
 
